--- a/Bind/Src/ModuloPersona.fx.yaml
+++ b/Bind/Src/ModuloPersona.fx.yaml
@@ -220,7 +220,7 @@ ModuloPersona As screen:
             //Set(IconoCargar;false);;
             //Set(_VarMensajeExterno; true);;
             
-            ClearCollect(Col_MiEquipoWalmart,Filter(Lst_Persona, Jefe_Directo = _VarUsuarioJefe && Estado = "Activo"));
+            ClearCollect(Col_MiEquipoWalmart,SortByColumns(Filter(Lst_Persona, Jefe_Directo = _VarUsuarioJefe && Estado = "Activo"),"Nombre_Persona",SortOrder.Descending));
             
             Clear(Col_IDEquiposAsignados);
             Clear(Col_MiEquiposJefe);
@@ -3271,7 +3271,7 @@ ModuloPersona As screen:
                 }) ;
                 
                 ClearCollect(Col_BD_Persona, Filter(Lst_Persona, Estado = "Activo"));
-                ClearCollect(Col_MiEquipoWalmart,Filter(Lst_Persona, Jefe_Directo = _VarUsuarioJefe && Estado = "Activo"));
+                ClearCollect(Col_MiEquipoWalmart,SortByColumns(Filter(Lst_Persona, Jefe_Directo = _VarUsuarioJefe && Estado = "Activo"),"Nombre_Persona",SortOrder.Descending));
                 Notify("Se ha asignado " &Cmb_BuscarPersona.Selected.DisplayName &" a tu Jefatura!",NotificationType.Success);
                 UpdateContext({_VarMostrarBarraBloqueo:false});
                 Clear(Col_EquiposPersonas);
@@ -3818,7 +3818,7 @@ ModuloPersona As screen:
                 //Collect(Col_EquiposPersonas;Filter(Ingresos_Ceses_Personas; Usuario = _VarUsuarioEliminar.Usuario; Estado = "Activo"));;
                 //Reset(Cmb_CambioDominio);;
                 //Reset(Cmb_CambioEquipo);;
-                ClearCollect(Col_MiEquipoWalmart,Filter(Lst_Persona, Jefe_Directo = _VarUsuarioJefe && Estado = "Activo"));
+                ClearCollect(Col_MiEquipoWalmart,SortByColumns(Filter(Lst_Persona, Jefe_Directo = _VarUsuarioJefe && Estado = "Activo"),"Nombre_Persona",SortOrder.Descending));
                 Notify("Se elimino de manera correcta al usuario.",NotificationType.Success,10000);
                 /*Ocultar Spinner Cargando*/
                 Set(_VarMostrarCargando,false);
