--- a/Bind/Src/ModuloPersonaV2.fx.yaml
+++ b/Bind/Src/ModuloPersonaV2.fx.yaml
@@ -8,8 +8,15 @@ ModuloPersonaV2 As screen:
                 RGBA(56, 96, 178, 1)
             )
         OnSelect: |-
-            =Set(_VarEquipo,"MiEquipo");
-            Navigate(ModuloEquipoV1,ScreenTransition.Fade)
+            =Patch(
+                Lst_ConfirmacionManagersF30,
+                LookUp(Lst_ConfirmacionManagersF30,ID=Value(Param("ID_Request"))),
+                {
+                    Fechaconfirmacion:Today(),
+                    Bitacora_Cambios:Var_BitacoraCambios
+            
+                }
+            )
         Text: ="Mi Equipo funcional"
         Visible: |-
             =If(
@@ -153,7 +160,6 @@ ModuloPersonaV2 As screen:
             {
                 'Interno/Externo':"Externo",
                 ID_Proveedor:Cmb_BuscarPersona_5.Selected.ID,
-                Jefe_Directo:_VarUsuarioJefe,
                 Nombre_Persona:" ",
                 Tipo_Usuario:"Directorio Activo",
                 Categoria:"Subcontratación Servicios"
@@ -647,8 +653,8 @@ ModuloPersonaV2 As screen:
             RadiusTopLeft: =0
             RadiusTopRight: =20
             Text: =
-            Width: =185
-            X: =1600
+            Width: =257
+            X: =1527
             Y: =7
             ZIndex: =2
 
@@ -708,14 +714,7 @@ ModuloPersonaV2 As screen:
                 =40
             HoverBorderColor: =RGBA(0, 121, 187, 1)
             Items: =Choices([@Lst_Persona].BuscarNombrePersona)
-            OnChange: |
-                =
-                If(
-                    IsBlank(_VarUsuarioSelect) && IsBlank(Cmb_BuscarMiEquipo.Selected.Usuario),
-                    Clear(Col_EquiposPersonas);
-                    //UpdateContext({_VarTempJefeDirecto:LookUp(Lst_Persona; Usuario = Last(ForAll(Split(First(ForAll(Split(Cmb_BuscarPersona.Selected.Claims;"@"); {Result: ThisRecord.Value})).Result;"|"); {Result: ThisRecord.Value})).Result;Jefe_Directo)});;
-                    Collect(Col_EquiposPersonas,Filter(Col_BD_AsignacionEquipos, Usuario = Last(ForAll(Split(First(ForAll(Split(Cmb_BuscarPersona_6.Selected.Claims,"@"), {Result: ThisRecord.Value})).Result,"|"), {Result: ThisRecord.Value})).Result, Estado = "Activo"))
-                );
+            OnChange: =Reset(Txt_Rut_4)
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
             SearchFields: =["DisplayName"]
@@ -731,36 +730,6 @@ ModuloPersonaV2 As screen:
             Y: =20
             ZIndex: =4
 
-        Dpd_Empresa_5 As dropdown:
-            BorderColor: =
-            BorderStyle: =BorderStyle.None
-            BorderThickness: =0
-            ChevronBackground: =RGBA(255, 255, 255, 1)
-            ChevronDisabledBackground: =RGBA(0, 0, 0, 0)
-            ChevronDisabledFill: =RGBA(128, 128, 128, 1)
-            ChevronFill: =RGBA(0, 121, 187, 1)
-            ChevronHoverBackground: =RGBA(0, 121, 187, 1)
-            Default: |-
-                =If(ThisItem.'Interno/Externo'="Interno","WALMART CHILE S.A.",
-                If(
-                    !IsBlank(ThisItem.Jefe_Directo),
-                    LookUp(Lst_Proveedores,ID=Value(ThisItem.ID_Proveedor)).Razon_Social_Proveedor,
-                    LookUp(Lst_Proveedores,ID=Value(LookUp(Col_BD_Persona, Usuario = Upper(Last(ForAll(Split(First(ForAll(Split(Cmb_BuscarPersona_6.Selected.Claims,"@"), {Result: ThisRecord.Value})).Result,"|"), {Result: ThisRecord.Value})).Result),ID_Proveedor))).Razon_Social_Proveedor
-                ))
-            DisabledColor: =RGBA(53, 61, 63, 1)
-            DisabledFill: =RGBA(214, 221, 224, 1)
-            DisplayMode: =If(ThisItem.'Interno/Externo'="Externo",DisplayMode.Edit,DisplayMode.Disabled)
-            HoverBorderColor: =RGBA(0, 121, 187, 1)
-            Items: |-
-                =SortByColumns(Lst_Proveedores,"Razon_Social",SortOrder.Ascending)
-                //Sort(ForAll(Distinct(Filter(Empresa,Dpd_InternoExterno_1.SelectedText.Value='Interno/Externo'),Empresa), {Result: ThisRecord.Value}),Result,SortOrder.Ascending)
-            PressedFill: =RGBA(0, 121, 187, 1)
-            Tooltip: =
-            Width: =350
-            X: =404
-            Y: =20
-            ZIndex: =5
-
         Txt_Rut_4 As text:
             Align: =Align.Center
             BorderColor: =RGBA(128, 128, 128, 1)
@@ -772,9 +741,12 @@ ModuloPersonaV2 As screen:
                     LookUp(Col_BD_Persona, Usuario = Upper(Last(ForAll(Split(First(ForAll(Split(Cmb_BuscarPersona_6.Selected.Claims,"@"), {Result: ThisRecord.Value})).Result,"|"), {Result: ThisRecord.Value})).Result),RUT)
                 )
             DelayOutput: =true
+            DisabledBorderColor: =RGBA(255, 255, 255, 1)
             DisabledColor: =RGBA(53, 61, 63, 1)
-            DisabledFill: =RGBA(214, 221, 224, 1)
-            DisplayMode: =If(ThisItem.'Interno/Externo'="Externo",DisplayMode.Edit,DisplayMode.Disabled)
+            DisabledFill: =RGBA(255, 255, 255, 1)
+            DisplayMode: =If(Label12_4.Text="Interno", DisplayMode.Disabled, DisplayMode.Edit)
+            Fill: =RGBA(214, 221, 224, 0.33)
+            HintText: ="8765432-1"
             PaddingLeft: =10
             RadiusBottomLeft: =0
             RadiusBottomRight: =0
@@ -796,9 +768,10 @@ ModuloPersonaV2 As screen:
                     ThisItem.'Fecha de Ingreso',
                     LookUp(Col_BD_Persona, Usuario = Upper(Last(ForAll(Split(First(ForAll(Split(Cmb_BuscarPersona_6.Selected.Claims,"@"), {Result: ThisRecord.Value})).Result,"|"), {Result: ThisRecord.Value})).Result),'Fecha de Ingreso')
                 )
+            DisabledBorderColor: =RGBA(255, 255, 255, 1)
             DisabledColor: =RGBA(53, 61, 63, 1)
-            DisabledFill: =RGBA(214, 221, 224, 1)
-            DisplayMode: =If(ThisItem.'Interno/Externo'="Externo",DisplayMode.Edit,DisplayMode.Disabled)
+            DisabledFill: =RGBA(255, 255, 255, 1)
+            DisplayMode: =If(Label12_4.Text="Interno", DisplayMode.Disabled, DisplayMode.Edit)
             EndYear: =Year(Today())+100
             IconBackground: =RGBA(244, 244, 244, 1)
             IconFill: =RGBA(0, 121, 187, 1)
@@ -870,9 +843,10 @@ ModuloPersonaV2 As screen:
                     ThisItem.Rol,
                     LookUp(Col_BD_Persona, Usuario = Upper(Last(ForAll(Split(First(ForAll(Split(Cmb_BuscarPersona_6.Selected.Claims,"@"), {Result: ThisRecord.Value})).Result,"|"), {Result: ThisRecord.Value})).Result),Rol)
                 )
+            DisabledBorderColor: =RGBA(255, 255, 255, 1)
             DisabledColor: =RGBA(53, 61, 63, 1)
-            DisabledFill: =RGBA(214, 221, 224, 1)
-            DisplayMode: =If(ThisItem.'Interno/Externo'="Externo",DisplayMode.Edit,DisplayMode.Disabled)
+            DisabledFill: =RGBA(255, 255, 255, 1)
+            DisplayMode: =If(Label12_4.Text="Interno", DisplayMode.Disabled, DisplayMode.Edit)
             Height: =47
             HoverBorderColor: =RGBA(0, 121, 187, 1)
             Items: =Sort(Rol,Roles,SortOrder.Ascending)
@@ -894,6 +868,15 @@ ModuloPersonaV2 As screen:
                     "Cambiar Jefatura",RGBA(54, 176, 75, 1),
                     RGBA(0, 0, 0, 1)
                 )
+            DisplayMode: |-
+                =If(
+                    
+                    If(ThisItem.Editando,IsBlank(Label12_4.Text),IsBlank(Cmb_BuscarPersona_6.Selected.Email))||
+                    IsBlank(Dtp_FechaIngreso_4.SelectedDate)||
+                    IsBlank(Txt_Rut_4.Text)||
+                    IsBlank(Dpd_Empresa_5.Selected.ID),
+                    DisplayMode.Disabled,
+                    DisplayMode.Edit)
             Height: =35
             Icon: |-
                 =Switch(
@@ -973,7 +956,8 @@ ModuloPersonaV2 As screen:
                     "Cambiar Jefatura",UpdateContext({var_ModalCambioJefatura:true}),
                     RGBA(0, 0, 0, 1)
                 );
-                Set(_var_PersonaSeleccionada,ThisItem)
+                Set(_var_PersonaSeleccionada,ThisItem);
+                Set(Var_BitacoraCambios,Var_BitacoraCambios&"|Se agrega a: "& TextInputCanvas1_1.Value)
             Tooltip: =
             Visible: =Label12_4.Text="Externo"
             Width: =35
@@ -1007,13 +991,14 @@ ModuloPersonaV2 As screen:
                         )
                 )
             Visible: =Label12_4.Text="Externo"
-            Width: =126
+            Width: =106
             X: =1600
             Y: =15
             ZIndex: =18
 
         "TextInputCanvas1_1 As 'Text input'":
             DisplayMode: =DisplayMode.Edit
+            FontSize: =18
             Height: =40
             Placeholder: ="Nombre de nueva Persona"
             Value: =ThisItem.Nombre_Persona
@@ -1038,9 +1023,10 @@ ModuloPersonaV2 As screen:
                     ThisItem.'Ubicación Laboral'.Value,
                     LookUp(Col_BD_Persona, Usuario = Upper(Last(ForAll(Split(First(ForAll(Split(Cmb_BuscarPersona_6.Selected.Claims,"@"), {Result: ThisRecord.Value})).Result,"|"), {Result: ThisRecord.Value})).Result),'Ubicación Laboral'.Value)
                 )
+            DisabledBorderColor: =RGBA(255, 255, 255, 1)
             DisabledColor: =RGBA(53, 61, 63, 1)
-            DisabledFill: =RGBA(214, 221, 224, 1)
-            DisplayMode: =If(ThisItem.'Interno/Externo'="Externo",DisplayMode.Edit,DisplayMode.Disabled)
+            DisabledFill: =RGBA(255, 255, 255, 1)
+            DisplayMode: =If(Label12_4.Text="Interno", DisplayMode.Disabled, DisplayMode.Edit)
             Height: =47
             HoverBorderColor: =RGBA(0, 121, 187, 1)
             Items: =["Chile","Extranjero"]
@@ -1078,6 +1064,35 @@ ModuloPersonaV2 As screen:
             Y: =34
             ZIndex: =24
 
+        Dpd_Empresa_5 As combobox:
+            BorderColor: =RGBA(0, 0, 0, 0)
+            BorderThickness: =0
+            ChevronBackground: =RGBA(56, 96, 178,0)
+            ChevronDisabledBackground: =RGBA(255, 255, 255, 1)
+            ChevronDisabledFill: =RGBA(106, 122, 127, 1)
+            ChevronFill: =RGBA(0, 121, 187, 1)
+            ChevronHoverBackground: =
+            DefaultSelectedItems: |-
+                =If(Label12_4.Text="Interno",Filter(Lst_Proveedores,ID=93),
+                If(
+                    !IsBlank(ThisItem.Jefe_Directo),
+                    Filter(Lst_Proveedores,ID=Value(ThisItem.ID_Proveedor)),
+                    Filter(Lst_Proveedores,ID=Value(LookUp(Col_BD_Persona, Usuario = Upper(Last(ForAll(Split(First(ForAll(Split(Cmb_BuscarPersona_6.Selected.Claims,"@"), {Result: ThisRecord.Value})).Result,"|"), {Result: ThisRecord.Value})).Result),ID_Proveedor)))
+                ))
+            DisabledBorderColor: =RGBA(255, 255, 255, 1)
+            DisabledFill: =RGBA(255, 255, 255, 1)
+            DisplayFields: =["Razon_Social"]
+            DisplayMode: =If(Label12_4.Text="Interno", DisplayMode.Disabled, DisplayMode.Edit)
+            Items: =SortByColumns(Lst_Proveedores,"Razon_Social",SortOrder.Ascending)
+            OnSelect: =Select(Parent)
+            SearchFields: =["RUT"]
+            SearchItems: =Search(SortByColumns(Lst_Proveedores,"Razon_Social",SortOrder.Ascending),Dpd_Empresa_5.SearchText,RUT)
+            Size: =12
+            Width: =350
+            X: =398
+            Y: =20
+            ZIndex: =26
+
     Btn_AgregarExternos_3 As button:
         Fill: =RGBA(232, 46, 179, 1)
         HoverFill: =RGBA(255, 255, 255, 0.63)
@@ -1088,7 +1103,6 @@ ModuloPersonaV2 As screen:
             {
                 'Interno/Externo':"Externo",
                 ID_Proveedor:Cmb_BuscarPersona_5.Selected.ID,
-                Jefe_Directo:_VarUsuarioJefe,
                 Nombre_Persona:" ",
                 Tipo_Usuario:"Manual",
                 Editando:true,
@@ -1284,7 +1298,7 @@ ModuloPersonaV2 As screen:
             Fill: =_VarColoresApp.AzulFondo
             FontWeight: =FontWeight.Bold
             Height: =52
-            OnSelect: |
+            OnSelect: |-
                 =Set(_VarMostrarCargando,true);
                 
                 Patch(
@@ -1317,6 +1331,7 @@ ModuloPersonaV2 As screen:
                 ClearCollect(Col_MiEquipoWalmart,SortByColumns(Filter(Lst_Persona, Jefe_Directo = _VarUsuarioJefe && Estado = "Activo"),"Nombre_Persona",SortOrder.Descending));
                 Notify("Se elimino de manera correcta al usuario.",NotificationType.Success,10000);
                 /*Ocultar Spinner Cargando*/
+                Set(Var_BitacoraCambios,Var_BitacoraCambios&"|Se da de baja a: "& _var_PersonaSeleccionada.Nombre_Persona)
             Text: ="Dar de baja"
             Width: =179
             X: =983
@@ -1335,6 +1350,23 @@ ModuloPersonaV2 As screen:
             X: =585
             Y: =350
             ZIndex: =5
+
+    Button25_7 As button:
+        Fill: |-
+            =If(
+                _VarEquipo="MiEquipo",
+                RGBA(22, 196, 247,1),
+                RGBA(56, 96, 178, 1)
+            )
+        OnSelect: |-
+            =Set(_VarEquipo,"MiEquipo");
+            Navigate(ModuloEquipoV1,ScreenTransition.Fade)
+        Text: ="Confirmar Personas a Control de Gestión"
+        Visible: =true//IsBlank(LookUp(Lst_ConfirmacionManagersF30,ID=Value(Param("ID_Request"))).Fechaconfirmacion)
+        Width: =466
+        X: =1379
+        Y: =955
+        ZIndex: =22
 
     Gp_Buscador_1 As group:
         Height: =5
